--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -6,7 +6,48 @@
 <p>Whilst GoToDo keeps out of your way it works tirelessly behind the scenes to give you just enough built in features to to aid productivity.</p>
 </div>
 
-<%= render 'form' %>
+<div class="well">
+  <%= form_for @user, :html => {class: 'form-horizontal'} do |f| %>
+
+    <%= render 'todos/errors', the_object: @user %>
+
+    <div class="form-group">
+      <%= f.label :first_name, class: 'col-sm-2 control-label' %>
+      <div class="col-sm-10">
+        <%= f.text_field :first_name, class: 'form-control' %>
+      </div>
+    </div>
+
+    <div class="form-group">
+      <%= f.label :last_name, class: 'col-sm-2 control-label' %>
+      <div class="col-sm-10">
+        <%= f.text_field :last_name, class: 'form-control' %>
+      </div>
+    </div>
+
+    <div class="form-group">
+      <%= f.label :username, class: 'col-sm-2 control-label' %>
+      <div class="col-sm-10">
+        <%= f.text_field :username, class: 'form-control' %>
+      </div>
+    </div>
+  
+    <div class="form-group">
+      <%= f.label :password, class: 'col-sm-2 control-label' %>
+      <div class="col-sm-10">
+        <%= f.password_field :password, class: 'form-control' %>
+      </div>
+    </div>
+
+    <div class="form-group">
+      <div class="col-sm-offset-2 col-sm-10"> 
+        <%= f.submit(@user.new_record? ? 'Register' : 'Update Profile', class: 'btn btn-success btn-small ')  %>
+      </div>
+    </div>
+    
+
+  <% end %>
+</div>
 
 <h4>Future GoToDo</h4>
 
