--- a/app/views/todos/_todo.html.erb
+++ b/app/views/todos/_todo.html.erb
@@ -8,7 +8,7 @@
   <div class="well green">
 <% end %>
     <p class="pull-right">
-      <%= link_to 'edit', edit_todo_path(todo), class: 'btn' %>
+      <%= link_to 'edit', edit_todo_path(todo), class: 'btn' %> | <%= link_to 'delete', todo_path(todo), method: :delete, data: {confirm: "Are you sure you want to delete #{todo.title}"} %>
     </p>
     <h2><%= link_to todo.title, todo_path(todo) %></h2>
     <p><%= todo.description %></p>
