--- a/app/views/todos/index.html.erb
+++ b/app/views/todos/index.html.erb
@@ -23,7 +23,7 @@
 
 
   <% if logged_in? %>
-    <% @todos.each do |todo| %>
+    <% @todos.order_by_deadline.each do |todo| %>
       <%= render 'todos/todo', todo: todo %>
     <% end %>
   <% end %>
