font-awesome and bug/feature requests added

--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -13,8 +13,20 @@
 
     </div>
 
+
     <% if logged_in? %>
+
       <ul class="nav navbar-nav navbar-right">
+        <li>                
+          <%= link_to new_bug_path, {title: 'Report a bug'} do %>
+            <i class="fa fa-bug"></i>
+          <% end %>
+        </li>
+        <li>
+          <%= link_to new_feature_path, {title: 'Suggest a new feature'} do %>
+            <i class="fa fa-bullhorn"></i>
+          <% end %>
+        </li>
         <li class="dropdown">
           <%= link_to '#', class: 'dropdown-toggle', 'data-toggle' => 'dropdown' do %>
             <%= @user.username %> <span class="caret" ></span>
