added datepicker UI

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -15,9 +15,9 @@
  */
 
 
-
 @import "bootstrap-sprockets" ;
 @import "bootstrap" ;
+@import 'bootstrap-datetimepicker';
 @import "font-awesome" ;
 
 .container {
