--- a/app/views/todos/new.html.erb
+++ b/app/views/todos/new.html.erb
@@ -27,12 +27,32 @@
       </div>
     </div>
 
+
+
+
+
+
     <div class="form-group">
-      <%= f.label :deadline, class: 'col-sm-2 control-label' %>
-      <div class="col-sm-10">
-      <%= f.datetime_select :deadline, class: 'form-control', :ampm => true, :minute_step => 5, :include_blank => true %>
-      </div>
+        <%= f.label :deadline, class: 'col-sm-2 control-label' %>
+        <div class='input-group date col-sm-8' id='datetimepicker1'>
+
+          <%= f.text_field :deadline, class: 'form-control', :ampm => true, :minute_step => 5, :include_blank => true %>
+          <span class="input-group-addon"><span class="glyphicon glyphicon-calendar"></span>
+            </span>
+        </div>
+
+
+            
+
+      
     </div>
+
+    <script type="text/javascript">
+        $(function () {
+            $('#datetimepicker1').datetimepicker();
+        });
+    </script>
+
 
     <div class="form-group">
       <div class="col-sm-offset-2 col-sm-10">
