--- a/app/views/todos/new.html.erb
+++ b/app/views/todos/new.html.erb
@@ -39,17 +39,14 @@
           <%= f.text_field :deadline, class: 'form-control', :ampm => true, :minute_step => 5, :include_blank => true %>
           <span class="input-group-addon"><span class="glyphicon glyphicon-calendar"></span>
             </span>
-        </div>
-
-
-            
-
-      
+        </div>      
     </div>
 
     <script type="text/javascript">
         $(function () {
-            $('#datetimepicker1').datetimepicker();
+            $('#datetimepicker1').datetimepicker({
+              format: 'YY-MM-DD'
+            });
         });
     </script>
 
