--- a/app/views/todos/new.html.erb
+++ b/app/views/todos/new.html.erb
@@ -45,7 +45,7 @@
     <script type="text/javascript">
         $(function () {
             $('#datetimepicker1').datetimepicker({
-              format: 'YY-MM-DD'
+              format: 'YYYY-MM-DD'
             });
         });
     </script>
