--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -53,3 +53,7 @@ div.comment_votes {
 .well.red{border: 1px solid #d9534f;}
 .well.amber{border: 1px solid #f0ad4e;}
 .well.green{border: 1px solid #5cb85c;}
+
+.complete_button{
+  border: 1px solid #5cb85c;
+}
