fixed typos in reg form

--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,9 +1,9 @@
-<%= render 'shared/content_title', title: 'Register to use GoToDo' %>
+<%= render 'shared/content_title', title: 'Register to use GotToDo' %>
 
 <div class="well">
 <p>Create tasks that you need to manage, set an optional deadline and add your own categories. This todo app is simple by design so it gets out of your way so you can focus on the task in hand.</p>
 
-<p>Whilst GoToDo keeps out of your way it works tirelessly behind the scenes to give you just enough built in features to to aid productivity.</p>
+<p>Whilst GotToDo keeps out of your way it works tirelessly behind the scenes to give you just enough built in features to to aid productivity.</p>
 </div>
 
 <div class="well">
