--- a/app/views/categories/new.html.erb
+++ b/app/views/categories/new.html.erb
@@ -8,6 +8,8 @@
     </div> 
     <div class="form-group">
       <%= f.submit(@category.new_record? ? "Add Category" : "Update Category", class: 'btn btn-default') %>
+      <%= link_to 'Cancel', root_path, class: 'btn btn-default' %>
+
     </div>
   <% end %>
 </div>
