--- a/app/views/todos/_form.html.erb
+++ b/app/views/todos/_form.html.erb
@@ -21,6 +21,7 @@
     <div class="form-group">
       <div class="col-sm-offset-2 col-sm-10">
         <%= f.submit(@todo.new_record? ? "Add ToDo" : "Update Todo", class: 'btn btn-default') %>
+        <%= link_to 'Cancel', root_path, class: 'btn btn-default' %>
       </div>
     </div>
   <% end %>
