--- a/app/views/todos/_todo.html.erb
+++ b/app/views/todos/_todo.html.erb
@@ -36,7 +36,7 @@
       <%= link_to edit_todo_path(todo), class: 'btn btn-sm btn-default' do %>
         <i class="fa fa-edit"></i>
       <% end %>
-      <%= link_to todo_path(todo), class: 'btn btn-sm btn-default', method: :delete, data: {confirm: "Are you sure you want to delete #{todo.title}"} do %>
+      <%= link_to todo_path(todo), class: 'btn btn-sm btn-default', title: "Destroy this Todo forever!", method: :delete, data: {confirm: "Are you sure you want to delete #{todo.title}"} do %>
         <i class="fa fa-bomb"></i>
       <% end %>
     </p>
