--- a/app/views/todos/_todo.html.erb
+++ b/app/views/todos/_todo.html.erb
@@ -33,10 +33,10 @@
       <% end %>
 
 
-      <%= link_to edit_todo_path(todo), class: 'btn btn-sm btn-default' do %>
+      <%= link_to edit_todo_path(todo), class: 'btn btn-sm btn-default edit' do %>
         <i class="fa fa-edit"></i>
       <% end %>
-      <%= link_to todo_path(todo), class: 'btn btn-sm btn-default', title: "Destroy this Todo forever!", method: :delete, data: {confirm: "Are you sure you want to delete #{todo.title}"} do %>
+      <%= link_to todo_path(todo), class: 'btn btn-sm btn-default destroy', title: "Destroy this Todo forever!", method: :delete, data: {confirm: "Are you sure you want to delete #{todo.title}"} do %>
         <i class="fa fa-bomb"></i>
       <% end %>
     </p>
