--- a/app/views/todos/index.html.erb
+++ b/app/views/todos/index.html.erb
@@ -12,7 +12,7 @@
       <p>A place to organize all your tasks. Create, View, Edit and generally manage everything you have to do. Ready to get started?...</p>
 
       <%= link_to register_path, class: 'btn btn-lg btn-primary' do %>
-      <span class="glyphicon glyphicon-pencil" ></span> Register
+      <span class="glyphicon glyphicon-pencil" ></span> saadsadsad
       <% end %>
       <%= link_to login_path, class: 'btn btn-lg btn-success' do %>
       <span class="glyphicon glyphicon-pencil" ></span> Login
