--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,4 +1,4 @@
-<%= render 'shared/content_title', title: "You are viewing: #{@profile.username}" %>
+<%= render 'shared/content_title', title: "你的用户名: #{@profile.username}" %>
 
 <% if @profile == @user %>
   <%= render 'form' %>
