--- a/app/views/categories/new.html.erb
+++ b/app/views/categories/new.html.erb
@@ -1,14 +1,14 @@
-<%= render 'shared/content_title', title: 'Create and add new category' %>
+<%= render 'shared/content_title', title: '创建新标签' %>
 
 <div class="well">
   <%= form_for @category do |f| %>
     <div class="form-group">
-      <%= f.label :name %>
+      <%= f.label :标签 %>
       <%= f.text_field :name %>
     </div> 
     <div class="form-group">
-      <%= f.submit(@category.new_record? ? "Add Category" : "Update Category", class: 'btn btn-default') %>
-      <%= link_to 'Cancel', root_path, class: 'btn btn-default' %>
+      <%= f.submit(@category.new_record? ? "添加" : "Update Category", class: 'btn btn-default') %>
+      <%= link_to '取消', root_path, class: 'btn btn-default' %>
 
     </div>
   <% end %>
