--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -1,4 +1,4 @@
-<% header = link_to('All todos', todos_path) + " &raquo; #{@category.name}".html_safe %>
+<% header = link_to('所有项目', todos_path) + " &raquo; #{@category.name}".html_safe %>
 
 <%= render 'shared/content_title', title: header %>
 
