--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -4,29 +4,23 @@
     <%= render 'todos/errors', the_object: @user %>
 
     <div class="form-group">
-      <%= f.label :first_name, class: 'col-sm-2 control-label' %>
+      <%= f.label :姓, class: 'col-sm-2 control-label' %>
       <div class="col-sm-10">
         <%= f.text_field :first_name, class: 'form-control' %>
       </div>
     </div>
 
     <div class="form-group">
-      <%= f.label :last_name, class: 'col-sm-2 control-label' %>
+      <%= f.label :名, class: 'col-sm-2 control-label' %>
       <div class="col-sm-10">
         <%= f.text_field :last_name, class: 'form-control' %>
       </div>
     </div>
 
-    <div class="form-group">
-      <%= f.label :username, class: 'col-sm-2 control-label' %>
-      <div class="col-sm-10">
-        <%= f.text_field :username, class: 'form-control' %>
-      </div>
-    </div>
 
     <% if @editable %>
       <div class="form-group">
-        <%= f.label :password, class: 'col-sm-2 control-label' %>
+        <%= f.label :密码, class: 'col-sm-2 control-label' %>
         <div class="col-sm-10">
           <%= f.password_field :password, class: 'form-control' %>
         </div>
@@ -34,7 +28,7 @@
 
       <div class="form-group">
         <div class="col-sm-offset-2 col-sm-10"> 
-          <%= f.submit(@user.new_record? ? 'Register' : 'Update Profile', class: 'btn btn-success btn-small ')  %>
+          <%= f.submit(@user.new_record? ? 'Register' : '更新', class: 'btn btn-success btn-small ')  %>
         </div>
       </div>
     <% end %>
