--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,3 +1,3 @@
-<%= render 'shared/content_title', title: "Edit Profile: #{@profile.username}" %>
+<%= render 'shared/content_title', title: "编辑用户: #{@profile.username}" %>
 
 <%= render 'form' %>
