--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,10 +1,6 @@
-<%= render 'shared/content_title', title: 'Register to use GotToDo' %>
+<%= render 'shared/content_title', title: '注册使用Dogoing' %>
 
-<div class="well">
-<p>Create tasks that you need to manage, set an optional deadline and add your own categories. This todo app is simple by design so it gets out of your way so you can focus on the task in hand.</p>
 
-<p>Whilst GotToDo keeps out of your way it works tirelessly behind the scenes to give you just enough built in features to to aid productivity.</p>
-</div>
 
 <div class="well">
   <%= form_for @user, :html => {class: 'form-horizontal'} do |f| %>
@@ -12,28 +8,28 @@
     <%= render 'todos/errors', the_object: @user %>
 
     <div class="form-group">
-      <%= f.label :first_name, class: 'col-sm-2 control-label' %>
+      <%= f.label :姓, class: 'col-sm-2 control-label' %>
       <div class="col-sm-10">
         <%= f.text_field :first_name, class: 'form-control' %>
       </div>
     </div>
 
     <div class="form-group">
-      <%= f.label :last_name, class: 'col-sm-2 control-label' %>
+      <%= f.label :名, class: 'col-sm-2 control-label' %>
       <div class="col-sm-10">
         <%= f.text_field :last_name, class: 'form-control' %>
       </div>
     </div>
 
     <div class="form-group">
-      <%= f.label :username, class: 'col-sm-2 control-label' %>
+      <%= f.label :用户名, class: 'col-sm-2 control-label' %>
       <div class="col-sm-10">
         <%= f.text_field :username, class: 'form-control' %>
       </div>
     </div>
   
     <div class="form-group">
-      <%= f.label :password, class: 'col-sm-2 control-label' %>
+      <%= f.label :密码, class: 'col-sm-2 control-label' %>
       <div class="col-sm-10">
         <%= f.password_field :password, class: 'form-control' %>
       </div>
@@ -41,7 +37,7 @@
 
     <div class="form-group">
       <div class="col-sm-offset-2 col-sm-10"> 
-        <%= f.submit(@user.new_record? ? 'Register' : 'Update Profile', class: 'btn btn-success btn-small ')  %>
+        <%= f.submit(@user.new_record? ? '注册' : 'Update Profile', class: 'btn btn-success btn-small ')  %>
       </div>
     </div>
     
@@ -49,14 +45,3 @@
   <% end %>
 </div>
 
-<h4>Future GoToDo</h4>
-
-<div class="well well-sm">
-Vote for future features that you think sounds cool or suggest your own (You can only pick/suggest one feature)
-
-coming soon ...
-</div>
-- add someone to task
-- receive email reminders
-- receive sms reminders
-- 
